fix(website): move footer to main content
when showing a daucus page with a menu, the main footer and the menu
should not overlap

close #122

--- a/website/public/styles/shell_large.css
+++ b/website/public/styles/shell_large.css
@@ -87,11 +87,9 @@
   max-height: calc(100vh - 6rem - 135px);
 }
 
-/* 936px (max-with of #page-container) + 2 * (250px (width of #daucus-menu) + 3rem (padding)) */
-@media screen and (min-width: 1533px) {
-  #standard-menu {
-    padding-left: 0;
-  }
+.daucus-page ~ #main-footer {
+  /* full width - standard menu */
+  width: calc(100vw - 250px - 3rem);
 }
 
 /*#endregion content */
